--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="공유받은 링크 목록을 확인하고 파일을 다운받을 수 있습니다. "
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="공유 링크 목록" />
+    <meta
+      property="og:description"
+      content="공유받은 링크 목록을 확인하고 파일을 다운받을 수 있습니다."
+    />
+    <meta property="og:url" contnent="https://shared-link-list.netlify.app/" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Shared Link List</title>
+    <title>공유 링크 목록</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
